# unplug-dining-case

./: README.md  pyproject.toml  sample_data.json  swagger.json  unPLUG-BE-Code-Challenge.md
src/: __init__.py  database.py  schema.sql  server.py
src/endpoints/menu/: create_menu.py  get_menu.py  update_menu.py
src/endpoints/menu_item/: update_menu_item.py
src/models/: menu.py  menu_item.py
src/scripts/: load_initial_data.py
test/menu/: get_menu_test.py  update_menu_test.py
test/menu_item/: update_menu_item_test.py
tests/: test_create_menu_item.py
