[tool.poetry]
name = "unplug-dining-case"
version = "1.0.0"
description = ""
authors = ["Okan Aslan <okanaslan.08@gmail.com>"]
readme = "README.md"
packages = [{include = "unplug_dining_case"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
black = "^23.12.1"
pytest = "^7.4.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
